Added Kafka Samples for Robot Telemetry

--- a/SQLEdgeSamples/KafkaSamples/RobotTelemetry/RobotTelemetryKafka/MyEnvironmentVariable.env
+++ b/SQLEdgeSamples/KafkaSamples/RobotTelemetry/RobotTelemetryKafka/MyEnvironmentVariable.env
@@ -3,7 +3,7 @@
 #string variables 
 
 ## Kafka Host URL In format <HostNameOrIP>:<PortNumber>
-KAFKA_HOST="40.83.17.22:9092"
+KAFKA_HOST=""
 
 #Kafka Topic to be used with this project. If the topic is not present, the code will create a topic with 4 partitions.
 KAFKA_TOPIC1="RobotTelemetry"
